feat: spring core翻译至5.10.4

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -9805,7 +9805,222 @@ public class AppConfig {
 
 ### 5.10.2. 其他的Spring  AspectJ切面
 
+除了@Configurable切面，spring-aspects.jar还包含一个可以用来驱动spring事务管理（@Transactional注解的类和方法）的切面。这主要针对想要在spring容器之外使用Spring Framework的事务支持的用户。
 
+解释 @Transactional注解的切面是AnnotationTransactionAspect。**当您使用此切面时，必须注解实现类（或类中方法或两者都），而不是类实现的接口（如果有）。AspectJ 遵循Java的规则，即不继承接口的注解**。
+
+类上的@Transactional注解指定执行类中任何公共操作的默认事务语义。
+
+类中方法上的@Transactional注解覆盖了类注解（如果存在）给出的默认事务语义。任何可见性的方法都可以注解，包括私有方法。直接注解非公共方法是获得此类方法执行事务划分的唯一方法。
+
+> :bulb:从spring 4.2以来，spring-aspects提供了一个类似的切面，为标准的javax.transaction.Transactional注解提供了完全相同的功能。查看JtaAnnotationTransactionAspect以获取更多详细信息。
+
+对于想要使用Spring配置和事务管理支持但不想（或不能）使用注解的AspectJ程序员，spring-aspects.jar还包含您可以扩展的abstract切面，以提供您自己的点切点定义。有关更多信息，请参见AbstractBeanConfigurerAspect和AbstractTransactionAspect切面。例如，以下片段显示了如何编写一个切面，以配置域模型中定义的所有对象实例，使用原型bean定义匹配全限定类名称：
+
+```java
+public aspect DomainObjectConfiguration extends AbstractBeanConfigurerAspect {
+
+    public DomainObjectConfiguration() {
+        setBeanWiringInfoResolver(new ClassNameBeanWiringInfoResolver());
+    }
+
+    // the creation of a new bean (any object in the domain model)
+    protected pointcut beanCreation(Object beanInstance) :
+        initialization(new(..)) &&
+        CommonPointcuts.inDomainModel() &&
+        this(beanInstance);
+}
+```
+
+
+
+### 5.10.3. 使用Spring Ioc配置AspectJ 切面
+
+当您在spring应用程序中使用AspectJ切面时，自然而然地想要和期望能够使用Spring配置此类切面。AspectJ运行时本身负责切面创建，并且通过Spring配置AspectJ创建的切面的手段取决于该切面使用的AspectJ 实例化模型（per-xxx子句）。
+
+大多数切面是单例切面。配置这些切面很容易。您可以创建一个bean定义，该定义像通常一样引用切面类，并包括`factory-method="aspectOf"`bean属性。这样可以确保Spring通过向AspectJ 询问而不是尝试创建实例本身来获得该切面实例。下面的示例显示了如何使用`factory-method="aspectOf"`属性：
+
+```xml
+<bean id="profiler" class="com.xyz.profiler.Profiler"
+        factory-method="aspectOf"> 
+
+    <property name="profilingStrategy" ref="jamonProfilingStrategy"/>
+</bean>
+```
+
+非单例切面很难配置。但是，可以通过创建原型bean定义并使用spring-aspects.jar的@Configurable支持来进行此操作，一旦由 AspectJ运行时创建了bean，就可以配置切面实例。
+
+如果您有一些想用AspectJ 织入（例如，使用 load-time织入域模型类）的@AspectJ切面，或与Spring AOP一起使用的其他@AspectJ 方面，并且这些方面都在Spring中配置，您需要告诉Spring AOP @AspectJ自动代理支持，哪些在配置中定义@AspectJ子集应该被自动代理。您可以使用在`<aop:aspectj-autoproxy/>`声明中的一个或多个`<include/>`元素进行此操作。每个`<include/>`元素都指定了一个名称模式，并且只有与至少一个模式匹配的bean用于Spring AOP自动代理配置。以下示例显示了如何使用`<include/>`元素：
+
+```xml
+<aop:aspectj-autoproxy>
+    <aop:include name="thisBean"/>
+    <aop:include name="thatBean"/>
+</aop:aspectj-autoproxy>
+```
+
+> :information_source:不要被`<aop:aspectj-autoproxy/>`元素误导。使用它会导致创建Spring AOP代理。这里会使用@AspectJ风格切面，但是不涉及AspectJ 运行时。
+
+
+
+### 5.10.4. Spring中的AspectJ  Load-time Weaving
+
+加载时间织入（LTW）是指将其加载到Java Virtual Machine（JVM）时，将其织入到应用程序类文件的过程。本节的重点是在Spring框架的特定上下文中配置和使用LTW。本节不是LTW的一般介绍。有关LTW的细节的完整详细信息和仅使用AspectJ配置LTW，请参见 [LTW section of the AspectJ Development Environment Guide](https://www.eclipse.org/aspectj/doc/released/devguide/ltw.html)。
+
+Spring框架在LTW上的价值是可以实现对织入过程的更细粒度的控制。'Vanilla' AspectJ LTW 是通过使用Java（5+）代理来实现的，该代理通过在启动JVM时指定VM参数来打开。因此，它是JVM范围内的设置，在某些情况下可能很好，但通常太粗糙了。启用Spring的LTW使您可以以每个级别的ClassLoader的基础打开LTW，这更细粒度，并且在“single-JVM-multiple-application”环境中更有意义（例如在典型的应用程序服务器中）。
+
+此外， [在某些环境](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-aj-ltw-environments)中，此支持可以实现加载时间织入，而无需对应用程序服务器的启动脚本进行任何修改：通过添加`-javaagent:path/to/aspectjweaver.jar`或（如本节中稍后所述）`-javaagent:path/to/spring-instrument.jar`。开发人员配置应用程序上下文以启用加载时间注入，而不是依靠通常负责部署配置（例如启动脚本）的管理员。
+
+让我们首先浏览使用Spring的 AspectJ LTW的快速示例，然后介绍示例中元素的详细细节。有关完整的示例，请参见[Petclinic sample application](https://github.com/spring-projects/spring-petclinic)。
+
+**示例**
+
+假设您是一个应用程序开发人员，你的任务是诊断系统中某些性能问题的原因。我们将开启简单的分析切面，而不打破分析工具，这使我们能够快速获得一些性能指标。然后，我们可以在此后立即将更细粒度的分析工具应用于该特定区域。
+
+> :information_source:此处介绍的示例使用XML配置。您还可以使用[Java configuration的](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-java)@AspectJ 。具体来说，您可以使用@EnableLoadTimeWeaving替代`<context:load-time-weaver/>`。
+
+以下示例显示了分析切面，这不是异常复杂的。这是一个使用 @AspectJ风格的切面声明的基于时间的分析器：
+
+```java
+package foo;
+
+import org.aspectj.lang.ProceedingJoinPoint;
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.Around;
+import org.aspectj.lang.annotation.Pointcut;
+import org.springframework.util.StopWatch;
+import org.springframework.core.annotation.Order;
+
+@Aspect
+public class ProfilingAspect {
+
+    @Around("methodsToBeProfiled()")
+    public Object profile(ProceedingJoinPoint pjp) throws Throwable {
+        StopWatch sw = new StopWatch(getClass().getSimpleName());
+        try {
+            sw.start(pjp.getSignature().getName());
+            return pjp.proceed();
+        } finally {
+            sw.stop();
+            System.out.println(sw.prettyPrint());
+        }
+    }
+
+    @Pointcut("execution(public * foo..*.*(..))")
+    public void methodsToBeProfiled(){}
+}
+```
+
+我们还需要创建一个META-INF/aop.xml文件，以告知我们 AspectJ织入器我们想要织入ProfilingAspect到我们的类中。此文件约定，在Java类路径存在的META-INF/aop.xml是标准的AspectJ。以下示例显示aop.xml文件：
+
+```xml
+<!DOCTYPE aspectj PUBLIC "-//AspectJ//DTD//EN" "https://www.eclipse.org/aspectj/dtd/aspectj.dtd">
+<aspectj>
+
+    <weaver>
+        <!-- only weave classes in our application-specific packages -->
+        <include within="foo.*"/>
+    </weaver>
+
+    <aspects>
+        <!-- weave in just this aspect -->
+        <aspect name="foo.ProfilingAspect"/>
+    </aspects>
+
+</aspectj>
+```
+
+现在，我们可以转到Spring特定的配置部分。我们需要配置LoadTimeWeaver（稍后解释）。该加载时间织入器是负责将一个或多个META-INF/aop.xml文件中的切面配置织入到应用程序中的类中的基本组件。好处是，它不需要大量配置（您可以指定更多选项，但稍后会详细介绍），如以下示例：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:context="http://www.springframework.org/schema/context"
+    xsi:schemaLocation="
+        http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd
+        http://www.springframework.org/schema/context
+        https://www.springframework.org/schema/context/spring-context.xsd">
+
+    <!-- a service object; we will be profiling its methods -->
+    <bean id="entitlementCalculationService"
+            class="foo.StubEntitlementCalculationService"/>
+
+    <!-- this switches on the load-time weaving -->
+    <context:load-time-weaver/>
+</beans>
+```
+
+现在已经有所有必需的工件（该切面，META-INF/aop.xml文件和弹簧Spring），我们可以使用main(..)方法创建以下驱动程序类，以演示LTW：
+
+```java
+package foo;
+
+import org.springframework.context.support.ClassPathXmlApplicationContext;
+
+public final class Main {
+
+    public static void main(String[] args) {
+        ApplicationContext ctx = new ClassPathXmlApplicationContext("beans.xml", Main.class);
+
+        EntitlementCalculationService entitlementCalculationService =
+                (EntitlementCalculationService) ctx.getBean("entitlementCalculationService");
+
+        // the profiling aspect is 'woven' around this method execution
+        entitlementCalculationService.calculateEntitlement();
+    }
+}
+```
+
+我们有最后一件事要做。本节的简介确实说，可以在Spring的per-`ClassLoader`选择性地打开LTW，这是事实。但是，在此示例中，我们使用Java代理（Spring提供）打开LTW。我们使用以下命令运行前面显示的Main类：
+
+```sh
+java -javaagent:C:/projects/foo/lib/global/spring-instrument.jar foo.Main
+```
+
+-javaagent是一个用于指定和 [agents to instrument programs that run on the JVMd](https://docs.oracle.com/javase/8/docs/api/java/lang/instrument/package-summary.html)的标志。Spring带有这样的代理：InstrumentationSavingAgent，其打包在spring-instrument.jar中，作为前面示例中-javaagent的值。
+
+Main程序执行的输出看起来像下一个示例。（我已经在calculateEntitlement()实现中介绍了一个Thread.sleep(..)语句，以便分析器实际上捕获了除0毫秒以外的其他东西（01234毫秒不是AOP引入的开销）。以下列表显示当我们运行我们的Profiler时得到的结果：
+
+```java
+Calculating entitlement
+
+StopWatch 'ProfilingAspect': running time (millis) = 1234
+------ ----- ----------------------------
+ms     %     Task name
+------ ----- ----------------------------
+01234  100%  calculateEntitlement
+```
+
+由于该LTW是通过使用成熟的AspectJ来实现的，因此我们不仅限于通知Spring beans。Main程序的以下轻微变化会产生相同的结果：
+
+```java
+package foo;
+
+import org.springframework.context.support.ClassPathXmlApplicationContext;
+
+public final class Main {
+
+    public static void main(String[] args) {
+        new ClassPathXmlApplicationContext("beans.xml", Main.class);
+
+        EntitlementCalculationService entitlementCalculationService =
+                new StubEntitlementCalculationService();
+
+        // the profiling aspect will be 'woven' around this method execution
+        entitlementCalculationService.calculateEntitlement();
+    }
+}
+```
+
+请注意，在前面的程序中，我们如何在spring容器中引导spring容器，然后在Spring的上下文之外完全创建一个StubEntitlementCalculationService的新实例。profiling通知仍然被织入。
+
+诚然，示例很简单。但是，Spring的LTW支持的基础知识都在较早的示例中引入了，本节的其余部分详细介绍了每个配置和用法背后的原因。
+
+> :information_source:此示例中使用的`ProfilingAspect`可能是基本的，但非常有用。这是开发时间切面的一个很好的例子，开发人员可以在开发过程中使用，然后在将被部署到UAT或生产的应用程序的构建时轻松地排除在外。
+
+**Aspects**
 
 
 
