feat: spring core翻译至6.1.1

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -10022,19 +10022,162 @@ public final class Main {
 
 **Aspects**
 
+您在LTW中使用的切面必须是AspectJ 切面。您可以用AspectJ 语言本身编写它们，也可以以 @AspectJ 风格中编写您的切面。然后，您的切面既是有效的AspectJ 切面，也是Spring  AOP切面。此外，需要在类路径上提供编译的切面类。
+
+**'META-INF/aop.xml'**
+
+通过Java 类路径上的一个或多个META-INF/aop.xml文件（直接或更通常是在jar中）配置AspectJ LTW基础设施。
+
+该文件的结构和内容在[AspectJ reference documentation](https://www.eclipse.org/aspectj/doc/released/devguide/ltw-configuration.html)的LTW部分详细介绍。因为aop.xml文件是100％的AspectJ，所以我们在这里没有进一步描述它。
+
+**所需的库（JARS）**
+
+您至少需要以下库来使用Spring Framework对AspectJ LTW的支持：
+
+- `spring-aop.jar`
+- `aspectjweaver.jar`
+
+​	如果您使用[Spring-provided agent to enable instrumentation](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-aj-ltw-environments-generic)，则还需要：
+
+- `spring-instrument.jar`
+
+**Spring配置**
+
+Spring LTW支持中的关键组件是LoadTimeWeaver接口（在org.springframework.instrument.classloading 包中），并且Spring发行版中有它的许多实现。LoadTimeWeaver负责在运行时添加一个或多个java.lang.instrument.ClassFileTransformers到ClassLoader，这为各种感兴趣的应用打开了大门，其中之一恰好是切面的LTW。
+
+> :information_source:如果您不熟悉运行时类文件转换的想法，请在继续之前，请参阅java.lang.instrument包的Javadoc API文档。虽然该文档并不全面，但至少您可以看到关键接口和类（如您在本节中阅读时引用）。
+
+为特定的ApplicationContext配置LoadTimeWeaver可以像添加一行一样容易。（请注意，您几乎肯定需要使用ApplicationContext作为您的Spring容器 - 通常，BeanFactory还不够，因为LTW支持使用了BeanFactoryPostProcessors。）
+
+要启用Spring Framework的LTW支持，您需要配置一个LoadTimeWeaver，通常使用@EnableLoadTimeWeaving注解来完成，如下所示：
+
+```java
+@Configuration
+@EnableLoadTimeWeaving
+public class AppConfig {
+}
+```
+
+另外，如果您喜欢基于XML的配置，请使用`<context:load-time-weaver/>`元素。请注意，该元素是在`context`名称空间中定义的。下面的示例显示了如何使用`<context:load-time-weaver/>`：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:context="http://www.springframework.org/schema/context"
+    xsi:schemaLocation="
+        http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd
+        http://www.springframework.org/schema/context
+        https://www.springframework.org/schema/context/spring-context.xsd">
+
+    <context:load-time-weaver/>
+
+</beans>
+```
+
+前面的配置自动为您定义和注册了许多LTW特异性基础架构bean（例如LoadTimeWeaver和AspectJWeavingEnabler）。默认的LoadTimeWeaver是DefaultContextLoadTimeWeaver类，它试图装饰自动检测到的LoadTimeWeaver。“自动检测到”的LoadTimeWeaver的确切类型取决于您的运行时环境。下表总结了各种LoadTimeWeaver实现：
+
+| 运行时环境                                                   | LoadTimeWeaver实现            |
+| ------------------------------------------------------------ | ----------------------------- |
+| [Apache Tomcat](https://tomcat.apache.org/)                  | TomcatLoadTimeWeaver          |
+| [GlassFish](https://eclipse-ee4j.github.io/glassfish/)(限制EAR 部署) | GlassFishLoadTimeWeaver       |
+| Red Hat的[JBoss AS](https://www.jboss.org/jbossas/) 或[WildFly](https://www.wildfly.org/) | JBossLoadTimeWeaver           |
+| IBM的[WebSphere](https://www-01.ibm.com/software/webservers/appserv/was/) | WebSphereLoadTimeWeaver       |
+| Oracle的[WebLogic](https://www.oracle.com/technetwork/middleware/weblogic/overview/index-085209.html) | WebLogicLoadTimeWeaver        |
+| 以Spring `InstrumentationSavingAgent`启动的JVM（java -javaagent:path/to/spring-instrument.jar） | InstrumentationLoadTimeWeaver |
+| Fallback，期望基础ClassLoader遵循共同的约定（即addTransformer，并且是可选的getThrowawayClassLoader方法） | ReflectiveLoadTimeWeaver      |
+
+请注意，该表仅列出使用DefaultContextLoadTimeWeaver时自动探测的LoadTimeWeaver。您可以准确指定要使用的LoadTimeWeaver实现。
+
+要使用Java配置指定特定的LoadTimeWeaver，请实现LoadTimeWeavingConfigurer接口，并覆盖getLoadTimeWeaver()方法。下面的示例指定了ReflectiveLoadTimeWeaver：
+
+```java
+@Configuration
+@EnableLoadTimeWeaving
+public class AppConfig implements LoadTimeWeavingConfigurer {
+
+    @Override
+    public LoadTimeWeaver getLoadTimeWeaver() {
+        return new ReflectiveLoadTimeWeaver();
+    }
+}
+```
+
+如果使用基于XML的配置，则可以将全限定类名指定为`<context:load-time-weaver/>`元素上的`weaver-class`属性的值。同样，下面的示例指定了ReflectiveLoadTimeWeaver：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:context="http://www.springframework.org/schema/context"
+    xsi:schemaLocation="
+        http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd
+        http://www.springframework.org/schema/context
+        https://www.springframework.org/schema/context/spring-context.xsd">
+
+    <context:load-time-weaver
+            weaver-class="org.springframework.instrument.classloading.ReflectiveLoadTimeWeaver"/>
+
+</beans>
+```
+
+通过配置定义和注册的LoadTimeWeaver可以稍后使用众所周知的名称LoadTimeWeaver从spring容器中检索。请记住，LoadTimeWeaver仅作为Spring LTW基础架构添加一个或多个ClassFileTransformers的机制。进行LTW的实际ClassFileTransformer是ClassPreProcessorAgentAdapter（来自org.aspectj.weaver.loadtime软件包）类。有关更多详细信息，请参见ClassPreProcessorAgentAdapter类的类级别Javadoc，因为实际上如何实现织入的细节超出了本文档的范围。
+
+还剩下最终的一个配置属性要讨论：`aspectjWeaving`属性（或`aspectj-weaving`如果您使用XML）。此属性控制LTW是否已启用。它接受三个可能的值之一，如果不存在该属性，则默认值是`autodetect`。下表总结了三个可能的值：
+
+| 注解值     | XML值      | 说明                                                         |
+| ---------- | ---------- | ------------------------------------------------------------ |
+| ENABLED    | on         | AspectJ 织入开启，切面在load-time时织入                      |
+| DISABLED   | off        | LTW 关闭，没有切面在load-time织入                            |
+| AUTODETECT | autodetect | 如果Spring LTW基础架构至少可以找到一个META-INF/aop.xm文件，那么AspectJ 织入开启。否则关闭。这是默认值。 |
+
+**特定环境的配置**
+
+最后一节包含应用程序服务器和Web容器等环境中使用Spring的LTW支持时所需的任何其他设置和配置。
+
+**Tomcat, JBoss, WebSphere, WebLogic**
+
+Tomcat，Jboss/Wildfly，IBM 的WebSphere 应用程序服务器和Oracle WebLogic 服务器都提供了能够具有本地instrumentation的通用应用程序ClassLoader。Spring的本地LTW可能利用这些类加载器实现来提供AspectJ织入。如前所述，您可以简单地启用load-time织入。具体来说，您无需修改JVM启动脚本去添加-javaagent:path/to/spring-instrument.jar。
+
+请注意，在JBOSS上，您可能需要禁用应用程序服务器扫描，以防止在应用程序实际启动之前加载类。快速解决方法是将其添加到您的工件中，其中一个名为WEB-INF/jboss-scanning.xml的文件，其中包括以下内容：
+
+```xml
+<scanning xmlns="urn:jboss:scanning:1.0"/>
+```
+
+**通用Java应用程序**
+
+当在特定的不支持LoadTimeWeaver实现的环境中需要类instrumentation时，JVM代理是一般解决方案。对于这种情况，Spring提供了InstrumentationLoadTimeWeaver，它需要特定于Spring的JVM代理，spring-instrument.jar。由@EnableLoadTimeWeaving和`<context:load-time-weaver/>`设置自动探测。
+
+要使用它，您必须通过提供以下JVM选项来启动使用Spring代理的虚拟机：
+
+```java
+-javaagent:/path/to/spring-instrument.jar
+```
+
+请注意，这需要修改JVM启动脚本，这可能会阻止您在应用程序服务器环境中使用此脚本（取决于服务器和操作策略）。也就是说，对于单次jvm部署（例如独立的Spring启动应用程序），您通常会在任何情况下控制整个JVM设置。
+
+## 5.11. 其他资料
+
+有关AspectJ的更多信息，请参见[AspectJ website](https://www.eclipse.org/aspectj)。
+
+*Eclipse AspectJ* by Adrian Colyer et. al. (Addison-Wesley, 2005)提供了AspectJ语言的全面介绍和参考
+
+*AspectJ in Action*, Second Edition by Ramnivas Laddad (Manning, 2009) 强烈推荐。这本书的重点是AspectJ，但是探索了许多一般的AOP主题（一定深度）。
 
 
 
+# 6. Spring AOP APIs
 
+上一章描述了Spring对@AspectJ和基于schema的切面定义的支持。在本章中，我们讨论了较低级别的Spring AOP API。对于通用应用，我们建议将Spring AOP与上一章中所述的AspectJ切点一起使用。
 
+## 6.1. Spring中的切点API
 
+本节介绍了Spring如何处理关键的切点概念。
 
-
-
-
-
-
-
+### 6.1.1. 概念
 
 
 
