--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -10179,6 +10179,156 @@ Tomcat，Jboss/Wildfly，IBM 的WebSphere 应用程序服务器和Oracle WebLogi
 
 ### 6.1.1. 概念
 
+Spring的切点模型可以独立于通知类型重复使用切点。您可以使用相同的切点指向不同的通知。
+
+org.springframework.aop.Pointcut是核心接口，用于针对特定类和方法的通知。完整接口如下：
+
+```java
+public interface Pointcut {
+
+    ClassFilter getClassFilter();
+
+    MethodMatcher getMethodMatcher();
+
+}
+```
+
+将Pointcut接口分为两个部分，可以重复使用类和方法匹配部分和细粒度组合操作（例如，和另一种方法匹配器执行“联合”操作）。
+
+ClassFilter接口用于将切点限制在给定的一组目标类中。如果matches()方法始终返回true，则所有目标类都是匹配的。以下列表显示ClassFilter接口定义：
+
+```java
+public interface ClassFilter {
+
+    boolean matches(Class clazz);
+}
+```
+
+MethodMatcher接口通常更重要。完整接口如下：
+
+```java
+public interface MethodMatcher {
+
+    boolean matches(Method m, Class targetClass);
+
+    boolean isRuntime();
+
+    boolean matches(Method m, Class targetClass, Object[] args);
+}
+```
+
+matches(Method, Class)方法用于测试该切点是否与目标类上的给定方法匹配。当创建AOP代理以避免在每个方法调用中进行测试时，可以执行此计算。如果两个参数的matches方法返回true，并且MethodMatcher的isRuntime()方法返回true，则在每个方法调用中都调用了三参数的matches 方法。这使得在目标通知启动之前切点可以查找传递给方法调用的参数。
+
+大多数MethodMatcher实现都是静态的，这意味着他们的isRuntime()方法返回false。在这种情况下，三参数的matches方法不会被调用。
+
+> :bulb:如果可能，尝试让切点是静态的，以允许AOP框架在AOP代理创建时缓存切点计算的结果。
+
+### 6.1.2. 切点操作
+
+Spring支持对切点的操作（尤其是union和intersection）。
+
+union是指任何一个切点匹配的方法。intersection是指两个切点匹配的方法。Union 通常更有用。您可以使用org.springframework.aop.support.Pointcuts类中的静态方法或使用同一软件包中的ComposablePointcut类来组合点。但是，使用AspectJ 切点表达式通常是一种更简单的方法。
+
+### 6.1.3. AspectJ 表达式切点
+
+自2.0以来，Spring使用的最重要类型的切点是org.springframework.aop.aspectj.AspectJExpressionPointcut。这是一个使用AspectJ提供的库来解析AspectJ 切点表达式字符串的切点。
+
+请参阅[上一章](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop)，以讨论支持的AspectJ 切点原语。
+
+### 6.1.4. 方便的切点实现
+
+Spring提供了几个方便的切点实现。您可以直接使用其中的一些；其他是用于特定应用程序的子类切点。
+
+**静态切点**
+
+静态切点基于方法和目标类，无法考虑该方法的参数。对于大多数用法，静态切点就足够了，而且是最好的。首次调用方法时，Spring只计算一次静态切点。之后，无需在每次方法调用时在计算切点。
+
+本节的其余部分介绍了Spring附带的一些静态切点实现。
+
+**正则表达式切点**
+
+指定静态点的一种明显方法是正则表达式。除了Spring，几个AOP框架使这成为可能。org.springframework.aop.support.JdkRegexpMethodPointcut是使用JDK中支持的正则表达式的通用正则表达式切点。
+
+使用JdkRegexpMethodPointcut类，您可以提供模式字符串列表。如果其中的任何一个是匹配的，那么切点将计算为true。（因此，最终的切点实际上是指定模式的结合。）
+
+以下展示了如何使用JdkRegexpMethodPointcut：
+
+```xml
+<bean id="settersAndAbsquatulatePointcut"
+        class="org.springframework.aop.support.JdkRegexpMethodPointcut">
+    <property name="patterns">
+        <list>
+            <value>.*set.*</value>
+            <value>.*absquatulate</value>
+        </list>
+    </property>
+</bean>
+```
+
+Spring提供了一个名为RegexpMethodPointcutAdvisor的类，它还可以引用Advice（请记住，Advice可以是拦截器，before 通知，throws 通知和其他）。这种场景下，Spring使用JdkRegexpMethodPointcut。使用RegexpMethodPointcutAdvisor简化了装配，因为一个Bean封装了切点和通知，如下示例显示：
+
+```xml
+<bean id="settersAndAbsquatulateAdvisor"
+        class="org.springframework.aop.support.RegexpMethodPointcutAdvisor">
+    <property name="advice">
+        <ref bean="beanNameOfAopAllianceInterceptor"/>
+    </property>
+    <property name="patterns">
+        <list>
+            <value>.*set.*</value>
+            <value>.*absquatulate</value>
+        </list>
+    </property>
+</bean>
+```
+
+您可以在任何Adivce类型下使用RegexpMethodPointcutAdvisor。
+
+**属性驱动的切点**
+
+静态切点的一种重要类型是元数据驱动的切点。它使用元数据属性的值（通常为源级元数据）。
+
+**动态切点**
+
+与静态切点相比，动态切点的计算更为昂贵。他们考虑了方法参数以及静态信息。这意味着每个方法调用时都要对它们进行计算，并且不能缓存结果，因为参数会有所不同。
+
+主要示例是控制流切点。
+
+**控制流切点**
+
+Spring控制流切点在概念上类似于AspectJ 的cflow切点，尽管功能较差。（当前无法指定此类切点运行在由另一个切点匹配的连接点下）控制流切点匹配当前调用堆栈。例如，如果通过com.mycompany.web软件包或SomeCaller类中的方法调用联接点，则可能会触发。使用org.springframework.aop.support.ControlFlowPointcut类指定控制流切点。
+
+> :information_source:在运行时计算控制流切点比其他动态切点要昂贵得多，在Java 1.4中，成本大约是其他动态切点的五倍。
+
+### 6.1.5. 切点基类
+
+Spring提供了有用的切点超类，以帮助您实现自己的切点。
+
+由于静态切点是最有用的，因此您可能应该子类化StaticMethodMatcherPointcut。这需要仅实现一个抽象方法（尽管您可以覆盖其他方法来自定义行为）。以下示例显示了如何子类化StaticMethodMatcherPointcut：
+
+```java
+class TestStaticPointcut extends StaticMethodMatcherPointcut {
+
+    public boolean matches(Method m, Class targetClass) {
+        // return true if custom criteria match
+    }
+}
+```
+
+还有用于动态切点的超类。您可以在任何通知类型下使用自定义切点。
+
+### 6.1.6. 自定义切点
+
+由于Spring AOP中的切点是Java类，而不是语言功能（如AspectJ），因此您可以声明自定义切点，无论是静态还是动态。Spring中的自定义切点可以很复杂。但是，如果可以的话，我们建议使用AspectJ 切点表达式语言。
+
+> :information_source:Spring的后期版本可能会提供对JAC提供的“语义上的切点”的支持，例如，“所有改变目标对象中实例变量的方法”。
+
+## 6.2. Spring通知API
+
+现在，我们可以检查Spring AOP如何处理通知。
+
+### 6.2.1. 通知的生命周期
+
 
 
 
