feat: spring core翻译至6.5

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -10329,12 +10329,510 @@ class TestStaticPointcut extends StaticMethodMatcherPointcut {
 
 ### 6.2.1. 通知的生命周期
 
+每个通知都是Spring bean。可以在所有被通知的对象上共享通知实例，也可以独享通知实例。这对应于 per-class或 per-instan通知。
+
+最常使用的是Per-class通知。它适合通用通知，例如事务通知。这些不取决于代理对象的状态或添加新状态。他们只是对方法和参数起作用。
+
+Per-instance 通知适合introductions，以支持混合类型。在这种情况下，通知将状态添加到代理对象中。
+
+您可以在相同的AOP代理中使用共享和per-instance通知的混合。
+
+### 6.2.2. Spring中的通知类型
+
+Spring提供了几种通知类型，并且可以扩展以支持任意通知类型。本节介绍了基本概念和标准通知类型。
+
+**拦截环绕通知**
+
+Spring最基本的通知类型是拦截环绕通知。
+
+Spring符合AOP Alliance接口--用于使用方法拦截的通知的使用。实现MethodInterceptor和环绕通知的类也应实现以下接口：
+
+```java
+public interface MethodInterceptor extends Interceptor {
+
+    Object invoke(MethodInvocation invocation) throws Throwable;
+}
+```
+
+以下示例显示了一个简单的MethodInterceptor实现：
+
+```java
+public class DebugInterceptor implements MethodInterceptor {
+
+    public Object invoke(MethodInvocation invocation) throws Throwable {
+        System.out.println("Before: invocation=[" + invocation + "]");
+        Object rval = invocation.proceed();
+        System.out.println("Invocation returned");
+        return rval;
+    }
+}
+```
+
+注意MethodInvocation的proceed()方法的调用。这将使得拦截器链向连接点执行。大多数拦截器调用此方法并返回其返回值。但是，MethodInterceptor与任何环绕通知一样，可以返回其他值或抛异常，而不是调用该方法。但是，没有充分的理由不要这样做。
+
+> :information_source:MethodInterceptor实现提供了与其他符合AOP联盟的AOP实现的互操作性。本节其余部分讨论的其他通知类型以特定于Spring的方式实现了常见的AOP概念。尽管使用最特定的通知类型具有优势，但如果您可能想在另一个AOP框架中运行该切面，请坚持使用MethodInterceptor。请注意，切点目前在框架之间不具互通性，而AOP联盟当前也未定义切点接口。
+
+**Before通知**
+
+更简单的通知类型是before 通知。这不需要MethodInvocation对象，因为仅在进入该方法之前就被调用。
+
+before通知的主要优点是无需调用proceed()方法，因此没有可能不慎未能沿着拦截器链进行处理。
+
+以下列表显示MethodBeforeAdvice接口：
+
+```java
+public interface MethodBeforeAdvice extends BeforeAdvice {
+
+    void before(Method m, Object[] args, Object target) throws Throwable;
+}
+```
+
+（尽管一般的对象适用于字段拦截并且Spring不太可能实现它，但Spring的API设计将允许field before通知。）
+
+请注意，返回类型是void。在通知运行之前，通知可以插入自定义行为，但不能更改返回值。如果before通知引发异常，它将停止进一步执行拦截器链。异常传播备份了拦截器链。如果它是未受检或在调用方法的签名上，则将其直接传递给客户端。否则，AOP代理将其包装在未受检的异常中。
+
+下面的示例显示了Spring的before 通知，该通知计算所有方法调用：
+
+```java
+public class CountingBeforeAdvice implements MethodBeforeAdvice {
+
+    private int count;
+
+    public void before(Method m, Object[] args, Object target) throws Throwable {
+        ++count;
+    }
+
+    public int getCount() {
+        return count;
+    }
+}
+```
+
+> :bulb:Before通知能在任何切点使用
+
+
+
+**Throws通知**
+
+如果连接点抛出了异常，则在连接点返回后调用Throws 通知。Spring提供强类型的Throws通知。请注意，这意味着org.springframework.aop.ThrowsAdvic接口不包含任何方法。这是一个标签接口，识别给定对象实现一种或多个强类型通知方法。这些应该为下形式：
+
+```java
+afterThrowing([Method, args, target], subclassOfThrowable)
+```
+
+只有最后一个参数是必须的。该方法签名可能具有一个或四个参数，具体取决于通知方法是否对该方法和参数感兴趣。接下来的两个列表是throws 通知的示例。
+
+如果抛出了RemoteException（包括其子类），则调用以下通知：
+
+```java
+public class RemoteThrowsAdvice implements ThrowsAdvice {
+
+    public void afterThrowing(RemoteException ex) throws Throwable {
+        // Do something with remote exception
+    }
+}
+```
+
+与前面的通知不同，下一个示例声明了四个参数，因此它可以访问调用的方法，方法参数和目标对象。如果抛出了ServletException，则调用以下通知：
+
+```java
+public class ServletThrowsAdviceWithArguments implements ThrowsAdvice {
+
+    public void afterThrowing(Method m, Object[] args, Object target, ServletException ex) {
+        // Do something with all arguments
+    }
+}
+```
+
+最后一个示例说明了如何在处理RemoteException和ServletException的单个类中使用这两种方法。任何数量的throws 通知方法都可以在单个类中组合。以下清单显示了最后一个示例：
+
+```java
+public static class CombinedThrowsAdvice implements ThrowsAdvice {
+
+    public void afterThrowing(RemoteException ex) throws Throwable {
+        // Do something with remote exception
+    }
+
+    public void afterThrowing(Method m, Object[] args, Object target, ServletException ex) {
+        // Do something with all arguments
+    }
+}
+```
+
+> :information_source:如果throws通知方法本身引发异常，则它覆盖了原始异常（也就是说，它将更改抛出的异常给用户）。用以覆盖的异常通常是RuntimeException，它与任何方法签名兼容。但是，如果throws通知方法引发了受检的异常，则必须与目标方法的声明异常匹配，因此，在某种程度上与特定的目标方法签名耦合。*请勿抛出与目标方法签名不相容的未受检异常！*
+
+> :bulb:Throws 通知能在任何切点使用
+
+
+
+**After Returning通知**
+
+Spring中的After Returning通知必须实现org.springframework.aop.AfterReturningAdvice接口，如以下列表显示：
+
+```java
+public interface AfterReturningAdvice extends Advice {
+
+    void afterReturning(Object returnValue, Method m, Object[] args, Object target)
+            throws Throwable;
+}
+```
+
+after returning通知可以访问返回值（无法修改），调用的方法，方法的参数和目标对象。
+
+以下after returning通知计算所有成功的没有抛出异常的方法调用：
+
+```java
+public class CountingAfterReturningAdvice implements AfterReturningAdvice {
+
+    private int count;
+
+    public void afterReturning(Object returnValue, Method m, Object[] args, Object target)
+            throws Throwable {
+        ++count;
+    }
+
+    public int getCount() {
+        return count;
+    }
+}
+```
+
+此通知不会改变执行路径。如果抛出异常，则thrown up拦截器链，而不是返回值。
+
+> :bulb: After returning 通知能在任何切点使用
+
+**Introduction通知**
+
+春季将Introduction通知作为一种特殊的拦截通知。
+
+Introduction需要一个IntroductionAdvisor和一个实现以下接口的IntroductionInterceptor：
+
+```java
+public interface IntroductionInterceptor extends MethodInterceptor {
+
+    boolean implementsInterface(Class intf);
+}
+```
+
+从AOP Alliance  MethodInterceptor接口继承的invoke()方法必须实现introduction。也就是说，如果被调用方法在introduced的接口上，则introduction 拦截器负责处理方法调用 - 它无法调用proceed()。
+
+Introduction 通知不能与任何点切点一起使用，因为它仅适用于类，而不是方法。您只能通过IntroductionAdvisor使用introduction 通知，其具有以下方法：
+
+```java
+public interface IntroductionAdvisor extends Advisor, IntroductionInfo {
+
+    ClassFilter getClassFilter();
+
+    void validateInterfaces() throws IllegalArgumentException;
+}
+
+public interface IntroductionInfo {
+
+    Class<?>[] getInterfaces();
+}
+```
+
+这里没有MethodMatcher，因此，没有Pointcut与introduction通知相关联。只有类过滤是合乎逻辑的。
+
+getInterfaces()方法返回该通知器引入的接口。
+
+内部使用validateInterfaces()方法，以查看是否可以由配置的IntroductionInterceptor实现引入的接口。
+
+考虑Spring测试套件中的一个示例，假设我们要将以下接口引入到一个或多个对象：
+
+```java
+public interface Lockable {
+    void lock();
+    void unlock();
+    boolean locked();
+}
+```
+
+我们希望能够将被通知的对象转换为Lockable，无论其类型如何，并调用lock和unlock方法。如果我们调用lock()方法，我们希望所有setter 方法都抛出LockedException。因此，我们可以添加一个切面，可以提供使对象不可变的能力，而无需任何知识：一个很好的AOP例子。
+
+首先，我们需要一个IntroductionInterceptor来进行繁重的工作。在这种情况下，我们扩展了org.springframework.aop.support.DelegatingIntroductionInterceptor类。我们可以直接实现IntroductionInterceptor，但是使用DelegatingIntroductionInterceptor是大多数情况下最好的。
+
+DelegatingIntroductionInterceptor旨在委托introduction到实际的被引入接口的实现，从而隐藏拦截的使用。您可以使用构造函数参数将委托人设置为任何对象。默认委托（当使用无参构造器时）是this。因此，在下一个示例中，委托是DelegatingIntroductionInterceptor的子类--LockMixin。给定委托（默认情况下，本身），DelegatingIntroductionInterceptor实例查找代表实现的所有接口（IntroductionInterceptor除外），并支持针对任何一个的引入。诸如LockMixin之类的子类可以调用suppressInterface(Class intf)方法来阻止不应暴露的接口。但是，无论IntroductionInterceptor准备支持多少个接口，IntroductionAdvisor控制哪个接口暴露。引入的接口掩盖了目标对同一接口的任何实现。
+
+因此，LockMixin扩展了DelegatingIntroductionInterceptor并实现Lockable本身。超类自动接收可以支持Lockable的引入，因此我们无需指定。我们可以以这种方式引入任何数量的接口。
+
+注意locked实例变量的使用。这有效地增加了目标对象中的其他状态。
+
+以下示例显示了示例lLockMixin类：
+
+```java
+public class LockMixin extends DelegatingIntroductionInterceptor implements Lockable {
+
+    private boolean locked;
+
+    public void lock() {
+        this.locked = true;
+    }
+
+    public void unlock() {
+        this.locked = false;
+    }
+
+    public boolean locked() {
+        return this.locked;
+    }
+
+    public Object invoke(MethodInvocation invocation) throws Throwable {
+        if (locked() && invocation.getMethod().getName().indexOf("set") == 0) {
+            throw new LockedException();
+        }
+        return super.invoke(invocation);
+    }
+
+}
+```
+
+通常，您无需覆盖invoke()方法。DelegatingIntroductionInterceptor实现（如果引入该方法，则调用delegate，否则将继续处理连接点）通常就足够了。在当前情况下，我们需要添加检查：如果处于锁定模式，则不能调用setter 方法。
+
+所需的引入只需要持有独特的LockMixin实例并指定引入的接口（在这种情况下，仅Lockable）。一个更复杂的示例可能引用引入拦截器（将定义为原型）。在这种情况下，没有与LockMixin相关配置，因此我们使用new来创建它。以下示例显示了我们的LockMixinAdvisor类：
+
+```java
+public class LockMixinAdvisor extends DefaultIntroductionAdvisor {
+
+    public LockMixinAdvisor() {
+        super(new LockMixin(), Lockable.class);
+    }
+}
+```
+
+我们可以非常简单地应用此advisor ，因为它不需要配置。（但是，如果没有IntroductionAdvisor，就不可能使用IntroductionInterceptor）与往常一样，advisor 必须是per-instance，因为它是有状态的。对于每个通知的对象，我们需要一个不同的LockMixinAdvisor实例，因此需要每个被通知对象持有一个LockMixin。advisor 包括通知对象状态的一部分。
+
+我们可以使用Advised.addAdvisor()方法或（建议的方式）在XML配置中应用此通知器。下面讨论的所有代理创建选择，包括“自动代理创建者”，正确处理引入和状态混入。
+
+## 6.3. Spring中的Advisor  API
+
+在Spring，Advisor 是一个仅包含与切点表达式关联的单个通知对象的切面。
+
+除了介绍的特殊情况外，任何advisor 都可以与任何通知一起使用。org.springframework.aop.support.DefaultPointcutAdvisor是最常用的advisor类。它可以与MethodInterceptor，BeforeAdvice或ThrowsAdvice一起使用。
+
+可以在同一AOP代理中将advisor 和通知类型混合使用。例如，您可以在一种代理配置中使用拦截around 通知，throws 通知和before 通知。Spring会自动创建必要的拦截器链。
+
+## 6.4. 使用`ProxyFactoryBean` 创建AOP代理
+
+如果您为业务对象使用Spring IOC容器（ApplicationContext或BeanFactory）（您应该是！），则需要使用Spring的AOP FactoryBean实现之一。（请记住，工厂bean引入了间接层，让其创建不同类型的对象。）
+
+> :information_source:SpringAOP支持还使用under the covers的工厂bean。
+
+在Spring创建AOP代理的基本方法是使用org.springframework.aop.framework.ProxyFactoryBean。这可以完全控制切点，任何适用的通知及其顺序。但是，如果您不需要这样的控制，则可以选择更简单的选项。
+
+### 6.4.1. 基础
+
+与其他Spring FactoryBean实现一样，ProxyFactoryBean引入了间接层。如果定义一个名为foo的ProxyFactoryBean，则引用foo的对象看不到ProxyFactoryBean实例本身，而是由ProxyFactoryBean中的getObject()方法实现创建的对象。此方法创建一个包装目标对象的AOP代理。
+
+使用ProxyFactoryBean或其他IOC感知的类创建AOP代理的最重要好处之一是，通知和切点也可以由IOC管理。这是一个强大的功能，可以实现其他AOP框架难以实现的方法。例如，通知本身可以引用应用程序对象（除了目标对象，应在任何AOP框架中可用），从而受益于依赖注入所提供的可拔插性。
+
+### 6.4.2. JavaBean属性
+
+与Spring提供的大多数FactoryBean实现相同，ProxyFactoryBean类本身就是Javabean。它的属性用于：
+
+- 指定你想代理的目标
+- 指定是否使用CGLIB (稍后描述，参考 [JDK- and CGLIB-based proxies](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-pfb-proxy-types)).
+
+一些关键的属性从 `org.springframework.aop.framework.ProxyConfig` (Spring所有AOP代理工厂的超类)继承。这些关键的属性包括：
+
+- `proxyTargetClass`: `true` 表示代理目标类而不是目标类的接口。如果此属性值设置为 `true`, 将创建CGLIB 代理 (参考[JDK- and CGLIB-based proxies](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-pfb-proxy-types))。
+- `optimize`: 控制是否将积极的优化应用于通过CGLIB创建的代理。除非您完全了解相关的AOP代理如何处理优化，否则您不应该使用此设置。 目前仅用于CGLIB代理。它对JDK动态代理没有影响。
+- `frozen`: 如果代理配置是frozen，则不再允许对配置进行更改。这既可以用作轻微的优化，也是在您不希望调用者能够在创建代理后修改代理（通过Advised接口）的情况。该属性的默认值为false，因此允许更改（例如添加其他通知）。
+- `exposeProxy`:确定是否应将当前代理暴露在ThreadLocal中，以便目标可以访问。如果目标需要获得代理，并且将exposeProxy属性设置为true，则目标可以使用AopContext.currentProxy()方法。
+
+其他特定于 `ProxyFactoryBean` 的属性包括：
+
+- `proxyInterfaces`:字符串接口名称的数组。如果不提供此项，则使用目标类的CGLIB代理(参考 [JDK- and CGLIB-based proxies](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-pfb-proxy-types)).
+
+- `interceptorNames`: Advisor，拦截器或其他通知名称的字符串数组。顺序是重要的，基于先到先得原则。也就是说，列表中的第一个拦截器是第一个能够拦截调用的拦截器。
+
+  这些名称是当前工厂中的bean名称，包括祖先工厂的Bean名称。您不能在此处提及bean的引用，因为这样做会导致ProxyFactoryBean忽略了通知的单例设置。
+
+  您可以使用星号（*）附加在拦截器名称后。这样做会导致所有匹配的advisor 应用。您可以在 [Using “Global” Advisors](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-global-advisors)中找到使用此功能的示例。
+
+- singleton: 无论getObject()方法多久一次调用，工厂应返回单例对象。几个FactoryBean实现提供了这种方法。默认值是true。如果您想使用有状态的通知（例如，对于状态混合），请使用原型通知以及设置singleton 为false。
+
+
+
+### 6.4.3. JDK和CGLIB代理
+
+本节是有关如何创建基于JDK的代理或针对特定目标对象的基于CGLIB的代理的最终文档。
+
+> :information_source:在创建基于JDK或CGLIB的代理方面，ProxyFactoryBean的行为在Spring的版本1.2.x和2.0之间发生了变化。现在，ProxyFactoryBean表现自动探测接口（如TransactionProxyFactoryBean）相似的语义。
+
+如果要代理的目标对象的类（以下简称为目标类）不会实现任何接口，则会创建基于CGLIB的代理。这是最简单的场景，因为JDK代理是基于接口的，没有接口意味着JDK代理甚至是不可能的。您可以插入目标bean，并通过设置interceptorNames属性来指定拦截器列表。请注意，即使将ProxyFactoryBean的proxyTargetClass属性设置为false，也会创建基于CGLIB的代理。（这样做是没有意义的，最好是从bean定义中删除，因为它充其量是多余的，而且令人困惑。）
+
+如果目标类实现一个（或多个）接口，则创建的代理类型取决于ProxyFactoryBean的配置。
+
+如果将ProxyFactoryBean的proxyTargetClass属性设置为true，则创建了基于CGLIB的代理。这是有道理的，并且符合至少令人惊讶的原则。即使将ProxyFactoryBean的proxyInterfaces属性设置为一个或多个全限定的接口名称，proxyTargetClass属性设置为true也会导致CGLIB代理生效。
+
+如果将ProxyFactoryBean的proxyInterfaces属性设置为一个或多个全限定的接口名称，则创建了基于JDK的代理。创建的代理实现了proxyInterfaces属性中指定的所有接口。如果目标类碰巧比proxyInterfaces属性中指定的接口实现了更多的接口，那么这一切都很好，但是返回的代理并未实现这些其他接口。
+
+如果尚未设置ProxyFactoryBean的proxyInterfaces属性，但是目标类的确实现了一个（或更多）接口，则ProxyFactoryBean 自动探测，即目标类确实实现了至少一个接口，则基于JDK的代理被创建。实际代理的接口是目标类实现的所有接口。实际上，这与提供目标类实现的每个接口的列表即设置proxyInterfaces属性相同。但是，它的工作要少得多，并且不容易出现书写错误。
+
+
+
+### 6.4.4. 代理接口
+
+考虑ProxyFactoryBean一个简单的示例。此示例涉及：
+
+- 代理的目标bean。这是示例中的personTarget定义
+- 提供通知的`Advisor` 和Interceptor` 
+- 一个AOP代理bean定义，用于指定目标对象（personTargetbean），代理接口以及要应用的通知。
+
+以下列表显示了一个示例：
+
+```xml
+<bean id="personTarget" class="com.mycompany.PersonImpl">
+    <property name="name" value="Tony"/>
+    <property name="age" value="51"/>
+</bean>
+
+<bean id="myAdvisor" class="com.mycompany.MyAdvisor">
+    <property name="someProperty" value="Custom string property value"/>
+</bean>
+
+<bean id="debugInterceptor" class="org.springframework.aop.interceptor.DebugInterceptor">
+</bean>
+
+<bean id="person"
+    class="org.springframework.aop.framework.ProxyFactoryBean">
+    <property name="proxyInterfaces" value="com.mycompany.Person"/>
+
+    <property name="target" ref="personTarget"/>
+    <property name="interceptorNames">
+        <list>
+            <value>myAdvisor</value>
+            <value>debugInterceptor</value>
+        </list>
+    </property>
+</bean>
+```
+
+请注意，interceptorNames属性列出了字符串列表，该属性将拦截器或advisors 的bean名称保存在当前工厂中。您可以使用advisors，interceptors，before, after returning, throws 通知。advisors 的顺序非常重要。
+
+> :information_source:您可能想知道为什么列表不持有bean引用。这样做的原因是，如果ProxyFactoryBean的singleton属性设置为false，则必须能够返回独立的代理实例。如果任何advisors 本身都是原型，则需要返回一个独立的实例，因此有必要从工厂获得原型的实例。持有引用是不够的。
+
+前面显示的person定义可以代替Person实施，如下：
+
+```java
+Person person = (Person) factory.getBean("person");
+```
+
+与普通的Java对象一样，在同一IOC上下文中的其他bean可以表达对其的强类型的依赖。以下示例显示了如何做到的：
+
+```xml
+<bean id="personUser" class="com.mycompany.PersonUser">
+    <property name="person"><ref bean="person"/></property>
+</bean>
+```
+
+此示例中的PersonUser类暴露了Person属性。就它而言，AOP代理可以透明地代替“真实”person 的实施。但是，它的类将是一个动态的代理类。可以将其转换为Advised接口（稍后讨论）。
+
+您可以使用匿名的内部bean隐藏目标和代理之间的区别。只有ProxyFactoryBean定义是不同的。该通知仅用于完整性。以下示例显示了如何使用匿名内部bean：
+
+```xml
+<bean id="myAdvisor" class="com.mycompany.MyAdvisor">
+    <property name="someProperty" value="Custom string property value"/>
+</bean>
+
+<bean id="debugInterceptor" class="org.springframework.aop.interceptor.DebugInterceptor"/>
+
+<bean id="person" class="org.springframework.aop.framework.ProxyFactoryBean">
+    <property name="proxyInterfaces" value="com.mycompany.Person"/>
+    <!-- Use inner bean, not local reference to target -->
+    <property name="target">
+        <bean class="com.mycompany.PersonImpl">
+            <property name="name" value="Tony"/>
+            <property name="age" value="51"/>
+        </bean>
+    </property>
+    <property name="interceptorNames">
+        <list>
+            <value>myAdvisor</value>
+            <value>debugInterceptor</value>
+        </list>
+    </property>
+</bean>
+```
+
+使用匿名内部bean的优势是只有一个Person类型的对象。如果我们要防止应用程序上下文的用户获得对不明智的对象的引用，或者需要避免使用Spring IOC 自动装配产生任何歧义，这将很有用。可以说，还有一个优势，因为ProxyFactoryBean定义是自包含的，有时候能够从工厂获得未通知的目标实际上可能是一个优势（例如，在某些测试场景中）。
+
+### 6.4.5. 代理类
+
+如果您需要代理类而不是接口，该怎么办？
+
+想象一下，在我们之前的示例中，没有Person接口。我们需要通知一个未实施任何业务接口的名为Person的类。在这种情况下，您可以配置Spring以使用CGLIB代理而不是动态代理。为此，请将ProxyFactoryBean的proxyTargetClass属性设置为true。虽然最好编程到接口而不是类，但是在使用旧版代码时，通知不实现接口的类很有用。（通常，Spring不是规定的。尽管它可以轻松应用良好的做法，但它避免了强制特定的方法。）
+
+如果需要，即使您确实有接口，也可以强制使用CGLIB。
+
+CGLIB代理通过在运行时生成目标类的子类来起作用。Spring配置此生成的子类以委派方法调用到源对象。*该子类用Decorator 模式（装饰模式）实现*，并在通知中织入。
+
+- `Final`方法不能被通知也不能被复写
+- 无需将CGLIB添加到您的类路径。从Spring 3.2起，CGLIB重新打包并包含在spring-core jar中。换句话说，基于CGLIB的AOP和JDK动态代理都可以“开箱即用”。
+
+CGLIB代理和动态代理之间的性能差异很小。在这种情况下，性能不应是决定性的。
+
+### 6.4.6. 使用“Global” Advisors
+
+通过将星号附加到拦截器名称上，所有匹配的advisors 被添加到advisor链中。如果您需要添加一组标准的“Global” advisor，这可能会派上用场。以下示例定义了两个“Global”  advisor：
+
+```xml
+<bean id="proxy" class="org.springframework.aop.framework.ProxyFactoryBean">
+    <property name="target" ref="service"/>
+    <property name="interceptorNames">
+        <list>
+            <value>global*</value>
+        </list>
+    </property>
+</bean>
+
+<bean id="global_debug" class="org.springframework.aop.interceptor.DebugInterceptor"/>
+<bean id="global_performance" class="org.springframework.aop.interceptor.PerformanceMonitorInterceptor"/>
+```
+
+## 6.5. 简洁的代理定义
 
 
 
 
 
-# 附录
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 附录 
 
 ## 服务定位器模式
 
