feat: spring core翻译至6.9

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -10793,31 +10793,208 @@ CGLIB代理和动态代理之间的性能差异很小。在这种情况下，性
 
 ## 6.5. 简洁的代理定义
 
+尤其是在定义事务代理时，您可能会得到许多类似的代理定义。父和子bean定义以及内部bean定义的使用可能会导致更清晰，更简洁的代理定义。
 
+首先，我们为代理创建一个父模板bean定义，如下：
 
+```xml
+<bean id="txProxyTemplate" abstract="true"
+        class="org.springframework.transaction.interceptor.TransactionProxyFactoryBean">
+    <property name="transactionManager" ref="transactionManager"/>
+    <property name="transactionAttributes">
+        <props>
+            <prop key="*">PROPAGATION_REQUIRED</prop>
+        </props>
+    </property>
+</bean>
+```
 
+这永远不会实例化，因此实际上是不完整的。然后，每个需要创建的代理都是子bean定义，它将父代理作为内部bean定义包裹起来。以下示例显示了这样的bean：
 
+```xml
+<bean id="myService" parent="txProxyTemplate">
+    <property name="target">
+        <bean class="org.springframework.samples.MyServiceImpl">
+        </bean>
+    </property>
+</bean>
+```
 
+您可以从父模板中覆盖属性。在下面的示例中，我们覆盖事务传播设置：
 
+```xml
+<bean id="mySpecialService" parent="txProxyTemplate">
+    <property name="target">
+        <bean class="org.springframework.samples.MySpecialServiceImpl">
+        </bean>
+    </property>
+    <property name="transactionAttributes">
+        <props>
+            <prop key="get*">PROPAGATION_REQUIRED,readOnly</prop>
+            <prop key="find*">PROPAGATION_REQUIRED,readOnly</prop>
+            <prop key="load*">PROPAGATION_REQUIRED,readOnly</prop>
+            <prop key="store*">PROPAGATION_REQUIRED</prop>
+        </props>
+    </property>
+</bean>
+```
 
+请注意，在父bean示例中，我们通过将abstract属性设置为true，将父bean的定义明确标记为抽象，所以其无法实例化。
 
+应用程序上下文（但不是简单的bean工厂），默认情况下，预初始化所有单例bean 。因此，重要的是（至少对于单例bean），如果您有一个（父）bean的定义，您打算仅用作模板，则必须确保将abstract属性设置为true。否则，应用程序上下文实际上试图预初始化它。
 
+## 6.6. 使用`ProxyFactory`编程式创建AOP代理
 
+很容易通过Spring编程创建AOP代理。这使您可以在不依赖Spring IOC的情况下使用Spring AOP。
 
+目标对象实现的接口会自动代理。以下列表显示了针对目标对象的代理创建，其中包含一个拦截器和一个通知：
 
+```java
+ProxyFactory factory = new ProxyFactory(myBusinessInterfaceImpl);
+factory.addAdvice(myMethodInterceptor);
+factory.addAdvisor(myAdvisor);
+MyBusinessInterface tb = (MyBusinessInterface) factory.getProxy();
+```
 
+第一步是构建一个org.springframework.aop.framework.ProxyFactory类型的对象。您可以使用目标对象（如前面的示例中）创建它，或者指定在构造函数中要代理的接口。
 
+您可以添加通知（将拦截器作为一种专用通知），advisors或两者兼而有之，在ProxyFactory的生命周期中维护他们。如果添加了IntroductionInterceptionAroundAdvisor，则可以使代理实现其他接口。
 
+关于ProxyFactory（从AdvisedSupport继承）也有一些便利方法，可让您添加其他通知类型，例如before 和throws 通知。AdvisedSupport是ProxyFactory和ProxyFactoryBean的超类。
 
+> :bulb:在大多数应用程序中，将AOP代理创建与IOC框架集成是最佳实践。我们建议您将Java代码与AOP进行外部化配置。
 
+## 6.7. 维护被通知的对象
 
+无论你如何创建AOP代理，都可以使用org.springframework.aop.framework.Advised接口来维护它们。无论其实现哪些其他接口，任何AOP代理都可以转换为该接口。该接口包括以下方法：
 
+```java
+Advisor[] getAdvisors();
 
+void addAdvice(Advice advice) throws AopConfigException;
 
+void addAdvice(int pos, Advice advice) throws AopConfigException;
 
+void addAdvisor(Advisor advisor) throws AopConfigException;
 
+void addAdvisor(int pos, Advisor advisor) throws AopConfigException;
 
+int indexOf(Advisor advisor);
 
+boolean removeAdvisor(Advisor advisor) throws AopConfigException;
+
+void removeAdvisor(int index) throws AopConfigException;
+
+boolean replaceAdvisor(Advisor a, Advisor b) throws AopConfigException;
+
+boolean isFrozen();
+```
+
+getAdvisors()方法返回已添加到工厂的Advisor，拦截器或其他通知类型。如果添加了Advisor，则该索引的advisor返回是您添加的对象。如果您添加了拦截器或其他通知类型，则Spring使用总是返回true的切点将其包裹在advisor 中。因此，如果您添加了MethodInterceptor，则该索引返回的advisor 是一个DefaultPointcutAdvisor，它返回您的MethodInterceptor和与所有类和方法匹配的切点。
+
+可以使用addAdvisor()方法来添加任何Advisor。通常，Advisor持有的切点和通知是通用的DefaultPointcutAdvisor，您可以将其与任何通知或切点一起使用（但不能用于introductions）。
+
+默认情况下，即使创建代理，也可以添加或删除advisors 或拦截器。唯一的限制是不可能添加或删除introduction advisor，因为工厂的现有代理未显示接口更改。（您可以从工厂获得新的代理，以避免此问题。）
+
+下面的示例显示，转换AOP代理到Advised的接口并检查和维护其通知：
+
+```java
+Advised advised = (Advised) myObject;
+Advisor[] advisors = advised.getAdvisors();
+int oldAdvisorCount = advisors.length;
+System.out.println(oldAdvisorCount + " advisors");
+
+// Add an advice like an interceptor without a pointcut
+// Will match all proxied methods
+// Can use for interceptors, before, after returning or throws advice
+advised.addAdvice(new DebugInterceptor());
+
+// Add selective advice using a pointcut
+advised.addAdvisor(new DefaultPointcutAdvisor(mySpecialPointcut, myAdvice));
+
+assertEquals("Added two advisors", oldAdvisorCount + 2, advised.getAdvisors().length);
+```
+
+> :information_source:生产中的业务对象是否可以修改建议有待商榷，尽管这是合法使用案例。但是，它在开发中可能非常有用（例如，在测试中）。有时，我们发现能够以拦截器或其他通知的形式添加测试代码非常有用，这能进入我们要测试的方法调用。（例如，通知可以为该方法创建的事务，在标记返回的事务回滚之前也许可以运行SQL以检查数据库是否正确更新。）
+
+根据您创建代理的方式，通常可以设置一个frozen标志。在这种情况下，Advised的isFrozen()方法返回true，并且通过添加或删除来修改通知的任何尝试都会导致AopConfigException。在某些情况下，冻结通知对象状态的能力很有用（例如，防止调用代码删除安全拦截器）。
+
+## 6.8. 使用"auto-proxy"
+
+到目前为止，我们已经考虑了使用ProxyFactoryBean或类似的factory bean 明确创建AOP代理。
+
+Spring还使我们可以使用“auto-proxy” bean 定义，该定义可以自动代理选定的bean 定义。这是在Spring的“bean post processor”基础架构上构建的，该基础架构可以修改任何bean 定义作为容器加载。
+
+在此模型中，您在XML bean定义文件中设置了一些特殊的bean定义，以配置自动代理基础架构。这使您可以声明有资格进行自动代理的目标。您不需要使用ProxyFactoryBean。
+
+有两种方法可以做到这一点：
+
+- 通过使用在当前上下文中指定特定bean类的auto-proxy创建者。
+- 一种自动创建的特殊情况，值得分别考虑：由源级元数据属性驱动的自动创建。
+
+### 6.8.1. Auto-proxy bean定义
+
+本节涵盖了由org.springframework.aop.framework.autoproxy软件包提供的自动创建器。
+
+**`BeanNameAutoProxyCreator`**
+
+BeanNameAutoProxyCreator类是BeanPostProcessor，它会自动为bean创建具有符合文字值或通配符的名称的bean代理。以下示例显示了如何创建BeanNameAutoProxyCreator bean：
+
+```xml
+<bean class="org.springframework.aop.framework.autoproxy.BeanNameAutoProxyCreator">
+    <property name="beanNames" value="jdk*,onlyJdk"/>
+    <property name="interceptorNames">
+        <list>
+            <value>myInterceptor</value>
+        </list>
+    </property>
+</bean>
+```
+
+与ProxyFactoryBean一样，有一个interceptorNames属性，而不是拦截器列表，以允许原型advisors的正确行为。命名为“interceptors”可以是advisors 或任何通知类型。
+
+就自动代理而言，使用BeanNameAutoProxyCreator的主要点是将相同的配置始终应用于多个对象，并具有最小的配置。它是将声明性事务应用于多个对象的流行选择。
+
+在前面示例中，其名称匹配的bean定义（例如jdkMyBean和onlyJdk）是具有目标类的普通旧bean定义。AOP代理是由BeanNameAutoProxyCreator自动创建的。所有匹配的bean类也适用相同的通知。请注意，如果使用advisors（而不是前一个示例中的拦截器），则切点可能对不同的bean类应用。
+
+**`DefaultAdvisorAutoProxyCreator`**
+
+一个更通用，更强大的自动创造器是DefaultAdvisorAutoProxyCreator。其自动化在当前上下文中应用合格的advisors ，而无需在自动代理的advisors bean定义中包含特定的bean名称。它具有一致的配置的优先并且避免与BeanNameAutoProxyCreator重复的配置。
+
+使用这种机制包括：
+
+- 定义 `DefaultAdvisorAutoProxyCreator` bean 定义。
+- 在相同或相关的上下文中指定任何数量的advisors 。请注意，这些必须是advisors ，而不是拦截器或其他通知。这是必要的，因为必须有一个计算的切点，以检查候选bean定义的每个通知资格。
+
+DefaultAdvisorAutoProxyCreator会自动计算每个advisor中包含的切点，以查看它应该适用于每个业务对象（例如businessObject1和businessObject2）的通知（如果有）。
+
+这意味着可以自动将任何数量的advisors 应用于每个业务对象。如果在任何advisors 中的切点没有匹配的业务对象，则不会代理该对象。由于bean定义是针对新业务对象添加的，因此，如有必要，它们将自动代理。
+
+一般而言，自动代理的优势是使调用者或依赖项获得一个未被通知的对象。在此ApplicationContext上调用getBean("businessObject1")返回AOP代理，而不是目标业务对象。（前面显示的“内部bean”惯用语也提供了此好处。）
+
+以下示例创建了DefaultAdvisorAutoProxyCreatorbean和本节中讨论的其他元素：
+
+```xml
+<bean class="org.springframework.aop.framework.autoproxy.DefaultAdvisorAutoProxyCreator"/>
+
+<bean class="org.springframework.transaction.interceptor.TransactionAttributeSourceAdvisor">
+    <property name="transactionInterceptor" ref="transactionInterceptor"/>
+</bean>
+
+<bean id="customAdvisor" class="com.mycompany.MyAdvisor"/>
+
+<bean id="businessObject1" class="com.mycompany.BusinessObject1">
+    <!-- Properties omitted -->
+</bean>
+
+<bean id="businessObject2" class="com.mycompany.BusinessObject2"/>
+```
+
+如果您想一致地将相同的通知应用于许多业务对象，那么DefaultAdvisorAutoProxyCreator非常有用。基础架构定义到位后，您可以添加新的业务对象，而无需包含特定的代理配置。您还可以轻松地删除其他切面（例如，跟踪或性能监视切面），对配置的更改最小。
+
+DefaultAdvisorAutoProxyCreator支持过滤（通过使用命名约定，因此只能计算某些advisors ，该advisors 允许在同一工厂使用多个不同的配置好的AdvisorAutoProxyCreators）和优先级。Advisors可以实现org.springframework.core.Ordered接口确保正确顺序。前面示例中使用的TransactionAttributeSourceAdvisor具有可配置的顺序。默认设置是无序的。
+
+## 6.9. 使用`TargetSource`实现
 
 
 
